2010-09-08  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  operation/reporting/reporting_xml.php: Merged from trunk. Improved
	  error detection in reports.

2010-09-07 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_compound.php: fixed the url in the ajax
	request.
	Fixes: #3056088

2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php
	operation/events/events_rss.php: Added authentification
	on the RSS of events and fixed ACLs merged from trunk

2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search
	Merged from trunk

P2010-09-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/search_alerts.php: Fixed the search of 
	alerts in alerts view and in main search

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/events/export_csv.php: Fixed ACLs to avoid
	to export system events to not administrators for bug 
	3053486. Merged from Trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed the modules
	combo in the status monitor screen to show only
	the visible agents modules. Merged from trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the groups combo
	in the networkmaps options to show only visible groups
	merge from trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php: Removed update manager from
	menu for users without PM permissions

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php
	operation/search_graphs.php
	operation/search_alerts.php
	operation/search_reports.php
	operation/search_maps.php
	operation/search_results.php
	operation/search_users.php: Restructured and fixed ACLs
	in the main search merged from trunk
