@@ -1,3 +1,12 @@
+2010-09-08  Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk
+
+	* godmode/alerts/alert_list.list.php: fixed the pagination when the list of
+	alerts show into alert tab in agent config page.
+	
+	Fixes: #3055920
+
 2010-09-08  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/functions_reporting.php,
